--- a/index.html
+++ b/index.html
@@ -552,9 +552,12 @@ thead th, tbody td{ padding:.55rem .55rem; }
 
   <!-- About -->
   <div id="panel-about" class="card" style="display:none;">
-      <p>Limerick GAA Hub is designed to provide a clear and intuitive overview of fixtures and results, easily filterable by competition, team, or date.</p>
+      <p>Limerick GAA Hub is designed to provide a clear overview of fixtures and results, easily filterable by competition, club, or date.</p>
       <p>Over time, the aim is to additionally build an archive of historical results.</p>
-      <p>Please note, this site is not associated with Limerick GAA, it has been developed solely by a club member and Limerick supporter.</p>
+      <p>This site is not associated with Limerick GAA. Official fixtures and results can be found at 
+        <a href="https://limerickgaa.ie" target="_blank" rel="noopener noreferrer">limerickgaa.ie</a>.
+      </p>
+      <p>Follow or get in touch.</p>
       
       <div class="social-list" aria-label="Social links">
         <a class="social-link" href="https://www.instagram.com/limerickgaahub" target="_blank" rel="noopener noreferrer"
@@ -570,6 +573,15 @@ thead th, tbody td{ padding:.55rem .55rem; }
            <i class="fas fa-envelope"></i><span>limerickgaahub@gmail.com</span>
         </a>
       </div>
+
+      <p style="font-size: 12px; color: #6b7280; margin-top: 15px;">
+        Privacy: This site uses Google Analytics to collect anonymous visitor statistics. 
+        No personal data is collected or shared.
+      </p>
+  </div>
+
+
+        
 </div> <!-- end of #panel-about -->
 
   <!-- Expand modal -->
