--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 <title>Limerick GAA Hub</title>
 <meta name="color-scheme" content="light only">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW8JCZRZHV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-BW8JCZRZHV');
+  </script>
+     
 <!-- Meta description -->
 <meta name="description" content="Fixtures, results and tables for Limerick GAA. Filter by competition, team, or date.">
 
