--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     gtag('js', new Date());
     gtag('config', 'G-BW8JCZRZHV');
   </script>
-     
+
+<link rel="canonical" href="https://limerickgaahub.ie/">
+  
 <!-- Meta description -->
 <meta name="description" content="Fixtures, results and tables for Limerick GAA. Filter by competition, team, or date.">
 
@@ -22,15 +24,19 @@
 <meta property="og:title" content="Limerick GAA Hub">
 <meta property="og:description" content="Fixtures, results and tables for Limerick GAA. Filter by competition, team, or date.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://limerickgaahub.github.io/">
-<meta property="og:image" content="https://limerickgaahub.github.io/android-chrome-512x512.png">
+<meta property="og:url" content="https://limerickgaahub.ie/">
+<meta property="og:image" content="https://limerickgaahub.ie/android-chrome-512x512.png">
 
 <!-- X / Twitter Cards -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Limerick GAA Hub">
 <meta name="twitter:description" content="Fixtures, results and tables for Limerick GAA. Filter by competition, team, or date.">
-<meta name="twitter:image" content="https://limerickgaahub.github.io/android-chrome-512x512.png">
+<meta name="twitter:image" content="https://limerickgaahub.ie/android-chrome-512x512.png">
 <meta name="twitter:site" content="@limerickgaahub">
+
+<meta property="og:image:alt" content="Limerick GAA Hub logo">
+
+<meta name="robots" content="index,follow">
 
 <!-- Favicons & app icons -->
 <!-- SVG (modern browsers) -->
