--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
 
   <!-- About -->
   <div id="panel-about" class="card" style="display:none;">
-      <p>Limerick GAA Hub is designed to provide a clear overview of fixtures and results, easily filterable by competition, club, or date.</p>
+      <p>Site is currently a work in progress. Go live will be by 29/08. Limerick GAA Hub is designed to provide a clear overview of fixtures and results, easily filterable by competition, club, or date.</p>
       <p>Over time, the aim is to additionally build an archive of historical results.</p>
       <p>This site is not associated with Limerick GAA. Official fixtures and results can be found at 
         <a href="https://limerickgaa.ie" target="_blank" rel="noopener noreferrer">limerickgaa.ie</a>.
